--- a/Views/Cms/Page.cshtml
+++ b/Views/Cms/Page.cshtml
@@ -4,11 +4,8 @@
     var hasImage = Model.PrimaryImage.HasValue;
 }
 
-@section head {
-    @WebApp.MetaTags(Model)
-}
 
-<header @(hasImage ? "class=has-image" : "") @(hasImage ? $"style=background-image:url({Url.Content(WebApp.Media.ResizeImage(Model.PrimaryImage, 1920, 400))})" : "")>
+<header @(hasImage ? "class=has-image" : "") @(hasImage ? $"style=background-image:url({ @Url.Content(WebApp.Media.ResizeImage(Model.PrimaryImage, 1920, 400)) })" : "")>
     <div class="dimmer"></div>
     <div class="container text-center">
         <h1>@Model.Title</h1>
