--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,14 +1,13 @@
 @using TAU.Website
 @using Microsoft.Extensions.Options
 @inject IOptions<GoogleReCaptchaConfig> GoogleRecaptchaConfig
-
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>@ViewData["Title"]</title>
-    <link href="~/Assets/EternaTemplate/img/favicon.png" rel="icon">
+    <link href="/favicon.png" type="image/png" rel="icon">
     <link href="~/Assets/EternaTemplate/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Raleway:wght@700&display=swap">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -18,18 +17,23 @@
     <link href="~/Assets/EternaTemplate/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="~/Assets/EternaTemplate/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="~/Assets/EternaTemplate/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <environment names="Development"><link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true"></environment>
-    <environment names="Production"><link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.min.css" asp-append-version="true"></environment>
+    <environment names="Development">
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
+    </environment>
+    <environment names="Production">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.min.css" asp-append-version="true">
+    </environment>
     @await RenderSectionAsync("head", false)
+    <script src="https://kit.fontawesome.com/bbf69c5864.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 <header id="header" class="d-flex align-items-center">
     <div class="container d-flex justify-content-between align-items-center">
         <div class="logo">
-            <a href="#">
+            <a href="/">
                 <svg width="30mm" height="auto" version="1.1" viewBox="0 0 62.429 20.052" xmlns="http://www.w3.org/2000/svg">
                     <g transform="translate(-25.477 -78.548)" display="none">
                         <rect x="20.501" y="72.216" width="72.999" height="32.184" fill="#eaa314" stroke-width=".26458"/>
@@ -158,10 +162,6 @@
 </footer>
 
 <script src="https://www.google.com/recaptcha/api.js?render=@GoogleRecaptchaConfig.Value.SiteKey"></script>
-@* <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> *@
-@* <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> *@
-@* <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> *@
-
 <script src="~/Assets/EternaTemplate/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="~/Assets/EternaTemplate/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/Assets/EternaTemplate/vendor/glightbox/js/glightbox.min.js"></script>
@@ -170,7 +170,6 @@
 <script src="~/Assets/EternaTemplate/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="~/Assets/EternaTemplate/vendor/php-email-form/validate.js"></script>
 <script src="Assets/EternaTemplate/js/main.js"></script>
-
 @await RenderSectionAsync("script", false)
 </body>
 </html>
