Using local non prod css.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
     </environment>
     <environment names="Production">
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
         <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
     </environment>
     @await RenderSectionAsync("head", false)
