test auto minifier

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
         <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
     </environment>
     <environment names="Production">
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
-        <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.min.css" asp-append-version="true">
     </environment>
     @await RenderSectionAsync("head", false)
     <script src="https://kit.fontawesome.com/bbf69c5864.js" crossorigin="anonymous"></script>
